Avancement classes de base

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,9 +11,11 @@ FetchContent_Declare(SFML
 FetchContent_MakeAvailable(SFML)
 
 add_executable(main src/main.cpp)
-target_link_libraries(main PRIVATE sfml-graphics
-                    C:/Users/cidmo/Documents/CS_PROJECT/LearnCpp/A2/Assignement_2/src/Vec2.cpp
-)
+add_library(component src/Component.h)
+
+target_link_libraries(main PRIVATE sfml-graphics)
+target_link_libraries(component PRIVATE sfml-graphics)
+
 target_compile_features(main PRIVATE cxx_std_17)
 
 if(WIN32)
