Résolution (pour le moment) problème de linking.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,11 +10,13 @@ FetchContent_Declare(SFML
     GIT_TAG 2.6.x)
 FetchContent_MakeAvailable(SFML)
 
-add_executable(main src/main.cpp)
-add_library(component src/Component.h)
+
+add_executable(main src/main.cpp src/Game.cpp src/Component.h)
+
 
 target_link_libraries(main PRIVATE sfml-graphics)
-target_link_libraries(component PRIVATE sfml-graphics)
+
+
 
 target_compile_features(main PRIVATE cxx_std_17)
 
